--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" lang="en" >
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -128,7 +128,7 @@
     </div>
     <div class="footer__column_content_info">
       <h3 class="footer__column-heading">О Практикуме</h3>
-      <p class="footer__columns-links"><a class="footer__column-link" href="#">Главная</a><br/> <a class="footer__column-link" href="#">Концепция</a><br/><a class="footer__column-link" href="#">Наставники</a></p>
+      <p class="footer__columns-links"><a class="footer__column-link" href="#">Главная</a><br/> <a class="footer__column-link" href="#">Концепция</a><a class="footer__column-link" href="#">Наставники</a></p>
     </div>
     <div class="footer__content_social">
       <h3 class="footer__column-heading">Соцсети</h3>
