--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
 <header class="header">
-  <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Яндекс.Практикум">
+  <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Yandex.Practicum">
 <h1 class="header__title">Научиться учиться</h1>
 <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать→ </a></p>
 <img class="header__main-illustration" src="images/header-image.png" alt="">
@@ -123,13 +123,17 @@
 <footer class="footer">
   <div class="footer__columns">
     <div class="footer__column_content_copyright">
-      <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс.Практикум">
+      <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Yandex.Practicum">
       <p class="footer__author">© Саня Астапов</p>
     </div>
     <div class="footer__column_content_info">
       <h3 class="footer__column-heading">О Практикуме</h3>
-      <p class="footer__columns-links"><a class="footer__column-link" href="#">Главная</a><br/> <a class="footer__column-link" href="#">Концепция</a><a class="footer__column-link" href="#">Наставники</a></p>
-    </div>
+      <div class="footer__columns-links">
+      <p><a class="footer__column-link" href="#">Главная</a></p>
+      <p><a class="footer__column-link" href="#">Концепция</a></p>
+      <p><a class="footer__column-link" href="#">Наставники</a></p>
+      </div>    
+        </div>
     <div class="footer__content_social">
       <h3 class="footer__column-heading">Соцсети</h3>
       <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube">YouTube</a>
