--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
 <header class="header">
-  <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Yandex.Practicum">
+  <img class="logo logo_place_header" src="images/logo_place_header.svg" alt="Яндекс.Практикум">
 <h1 class="header__title">Научиться учиться</h1>
 <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?<a class="header__link" href="#"> Узнать→ </a></p>
 <img class="header__main-illustration" src="images/header-image.png" alt="">
@@ -123,7 +123,7 @@
 <footer class="footer">
   <div class="footer__columns">
     <div class="footer__column_content_copyright">
-      <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Yandex.Practicum">
+      <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Яндекс.Практикум">
       <p class="footer__author">© Саня Астапов</p>
     </div>
     <div class="footer__column_content_info">
@@ -136,9 +136,9 @@
         </div>
     <div class="footer__content_social">
       <h3 class="footer__column-heading">Соцсети</h3>
-      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube">YouTube</a>
-      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="VK">Вконтакте</a>
-      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="TikTok">TikTok</a>
+      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a>
+      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вк">Вконтакте</a>
+      <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок">TikTok</a>
     </div>
   </div>
 </footer>
