--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
-    <main>
+    <main class="content">
       <section class="description">
         <div class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
@@ -155,6 +155,7 @@
         </div>
       </div>
     </footer>
+    </main>
   </div>
 </body>
 
