--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" alt="Синий реугольник" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
-    </main class="content">
+    </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
@@ -138,25 +138,25 @@
         </div>
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <nav class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>
-            <a class="footer__column-link" href="#">Концепция</a>
-            <a class="footer__column-link" href="#">Наставники</a>
+          <nav class="footer__column footer__column-links">
+            <a class="footer__column footer__column-link" href="#">Главная</a>
+            <a class="footer__column footer__column-link" href="#">Концепция</a>
+            <a class="footer__column footer__column-link" href="#">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
-              alt="Ютуб">YouTube</a>
-          <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg"
-              alt="Вк">Вконтакте</a>
-          <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
-              alt="ТикТок">TikTok</a>
+          <nav class="footer__column footer__column-links">
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
+                alt="Ютуб">YouTube</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg"
+                alt="Вк">Вконтакте</a>
+            <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
+                alt="ТикТок">TikTok</a>
+          </nav>
         </div>
       </div>
     </footer>
-    </main>
   </div>
 </body>
-
 </html>
