--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни?<a class="header__link" href="#"> Узнать→ </a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -39,29 +39,29 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img src="/images/cards-attention.png" alt="Два вида внимания" class="cards__image">
+            <img src="images/cards-attention.png" alt="Два вида внимания" class="cards__image">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-recall.png" alt="Два вида внимания" class="cards__image">
+            <img src="images/cards-recall.png" alt="Воспоминание" class="cards__image">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-interliving.png" alt="Два вида внимания" class="cards__image">
+            <img src="images/cards-interliving.png" alt="Интерливинг" class="cards__image">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-question.png" alt="Два вида внимания" class="cards__image">
+            <img src="images/cards-question.png" alt="Вопросы" class="cards__image">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </li>
           <li class="cards__item">
-            <img src="/images/cards-competence.png" alt="Два вида внимания" class="cards__image">
+            <img src="images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -72,10 +72,10 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="720" height="405"
-            src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="720" height="405"
-            src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe"
+            src="https://www.youtube.com/embed/5MgBikgcWnY" allow="fullscreen"></iframe>
+          <iframe class="video__iframe"
+            src="https://www.youtube.com/embed/arj7oStGLkU" allow="fullscreen"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -137,14 +137,14 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <h3 class="khan__quote-author">Джордж Лукас</h3>
+          <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-          <img src="/images/khan-book.jpg" alt="Весь мир - школа" class="khan__book-pic">
+          <img src="images/khan-book.jpg" alt="Весь мир - школа" class="khan__book-pic">
           <a href="#" class="khan__buy-link">Купить книгу→</a>
         </div>
       </section>
@@ -194,7 +194,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
