--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,10 +73,8 @@
         <h2 class="section-title">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe"
-            src="https://www.youtube.com/embed/5MgBikgcWnY" allow="fullscreen"></iframe>
-          <iframe class="video__iframe"
-            src="https://www.youtube.com/embed/arj7oStGLkU" allow="fullscreen"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" allow="fullscreen"></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" allow="fullscreen"></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -240,4 +239,5 @@
     </footer>
   </div>
 </body>
+
 </html>
