--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
             смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-          <p class="khan__quote-author">Джордж Лукас</p>
+          <h2 class="khan__quote-author">Джордж Лукас</h2>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <img src="images/khan-book.jpg" alt="Весь мир - школа" class="khan__book-pic">
           <a href="#" class="khan__buy-link">Купить книгу→</a>
@@ -199,13 +199,13 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__link"><img class="resources__logo" src="/images/logo/resources-arzamas.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg"
               alt="Арзамас"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="/images/logo/resources-n1.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-n1.svg"
               alt="Н1"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="/images/logo/resources-strelka.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-strelka.svg"
               alt="Стрелка"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="/images/logo/resources-polka.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-polka.svg"
               alt="Полка"></a>
         </div>
       </section>
