--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="images/logo/resources-arzamas.svg"
               alt="Арзамас"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-n1.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="images/logo/resources-n1.svg"
               alt="Н1"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-strelka.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="images/logo/resources-strelka.svg"
               alt="Стрелка"></a>
-          <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-polka.svg"
+          <a href="#" class="resources__link"><img class="resources__logo" src="images/logo/resources-polka.svg"
               alt="Полка"></a>
         </div>
       </section>
